去除重复作业实现性能小优化

--- a/221801209/src/.gitignore
+++ b/221801209/src/.gitignore
@@ -2,11 +2,12 @@
 test*
 *test
 .idea
+TimeTest.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
+.pytest_cache/
 # C extensions
 *.so
 
