修复读取文件错误
1.原本的读取文件是一行一行的读取，自动补上\n，但由于换行符有时候可能是\r\n，所以这种方式是错误的。现在改成用read(byte[] b)函数读取。
2. 还修复了最后输出单词时，如果出现频率相同的单词，优先输出字典序靠前的单词

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@
 /221801310/src/input.txt
 /out/
 /221801310/src/output.txt
+/.gradle/
+/221801310/production/
+/221801310/Test/
+/221801310/src/input1.txt
+/221801310/src/input.txt
+/221801310/src/input3.txt
+/221801310/src/input4.txt
+/221801310/src/output.txt
+/221801310/src/output2.txt
+/221801310/src/output3.txt
+/221801310/src/output4.txt
