--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,20 @@
 /221801310/production/
 /221801310/Test/
 /221801310/src/input1.txt
-/221801310/src/input.txt
 /221801310/src/input3.txt
 /221801310/src/input4.txt
-/221801310/src/output.txt
 /221801310/src/output2.txt
 /221801310/src/output3.txt
 /221801310/src/output4.txt
+/221801310/src/input2.txt
+/221801310/src/input5.txt
+/221801310/src/input6.txt
+/221801310/src/input7.txt
+/221801310/src/input8.txt
+/221801310/src/input9.txt
+/221801310/src/output1.txt
+/221801310/src/output5.txt
+/221801310/src/output6.txt
+/221801310/src/output7.txt
+/221801310/src/test1.txt
+/221801310/src/testout1.txt
